# sfinance

./: .gitignore  README.md  _toc.yml  changelog.md  custom-instructions.md  inspect_findex_data.py  myst.yml  project_handoff.md  project_notes.md  pyproject.toml  setup.py  slides.md
.github/workflows/: deploy.yml
archive/ResearchNotes/: OnBaronCSR.tex  Variable Investment Notes.tex
data/: Notes for Findex figures.docx  findex_exploration.ipynb
log/: social-finance_log.md
notebooks/: 1-results.md  2-socfin_m.ipynb  3-basicmodel.ipynb  Social Finance (dropbox).lnk  myst.yml  slides.md  socfin_m.tex  socialfinance.py
notebooks/.ipynb_checkpoints/: socfin_m-checkpoint.ipynb
notebooks/_drafts/: basicmodel.ipynb  socfin_m_old.ipynb  socfin_scale.ipynb
notebooks/archive/: socfin_m.ipynb
paper/: Notes2024.tex  Social Finance_2022.doc  Social Finance_2022.docx  Social Finance_2022.tex  Social Finance_2022.tex.Backup-20220203-150702-15416  Social Finance_2022ml.docx  Social Finance_2022ml.md  main.tex  references.bib  references0.bib
paper/archive/: Existing Outline.docx  SFnew.tex  Social Finance_2014_1_17j (Repaired).doc  Social Finance_2014_1_17j.doc  Social Finance_2017.doc  The Subsidy of Microfinance - June 28 2013 v2.docx  foo.tex  generic model.tex  social_finance2016.docx  socialfinance2016.tex  ~$cial Finance_2017.doc  ~WRL3972.tmp
paper/archive/Social Finance_2022/: Social Finance_2022.tex  (+2 more)
paper/archive/overleaf/: EnclosurePaper.bib  (+2 more)
socialfinance/: __init__.py  socialfinance.py
socialfinance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+4 files in other folders)
